# SenseV

./: app.py  app2.py  botsort.txt  modelo_genero_v12m_28-05-25_adam_imgz640-batch10_200epochs.txt  mot_box.py  nice_parameters.txt  pyproject.toml  requeriments.txt  tracker.py  utils.py  yan.py  yan_transreid.py
