[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sensevision-tracker"
version = "0.1.0"
description = "Meu projeto customizado de tracking com TransReID e YOLO."
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]